[gd_scene load_steps=55 format=3 uid="uid://sdo7i7sf8xr1"]

[ext_resource type="Texture2D" uid="uid://dt4c040ucqf7b" path="res://asset/slime.png" id="1_iofoj"]
[ext_resource type="Script" path="res://script/Player.gd" id="1_se23e"]
[ext_resource type="Texture2D" uid="uid://7h62exg4t7pi" path="res://asset/VFX/SmokeFX Lite SpriteSheet 3A-5.png" id="2_405fq"]
[ext_resource type="Texture2D" uid="uid://df5he28sm72v3" path="res://asset/VFX/05.png" id="4_xvanp"]
[ext_resource type="AudioStream" uid="uid://bsjgeorab3mcf" path="res://asset/SFX/sci-fi-bubble-pop-89059.mp3" id="5_l35dd"]
[ext_resource type="AudioStream" uid="uid://486ypbstcwok" path="res://asset/SFX/woosh-230554.wav" id="6_fvjrl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_80q6w"]
atlas = ExtResource("2_405fq")
region = Rect2(5, 0, 63, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ah8g"]
atlas = ExtResource("2_405fq")
region = Rect2(68, 0, 63, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3538"]
atlas = ExtResource("2_405fq")
region = Rect2(131, 0, 63, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_03n2t"]
atlas = ExtResource("2_405fq")
region = Rect2(194, 0, 63, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdssj"]
atlas = ExtResource("2_405fq")
region = Rect2(257, 0, 63, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rf2p7"]
atlas = ExtResource("2_405fq")
region = Rect2(320, 0, 63, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_lgthj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_80q6w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ah8g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3538")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_03n2t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdssj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rf2p7")
}],
"loop": false,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_rttm4"]
atlas = ExtResource("1_iofoj")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xtxf8"]
atlas = ExtResource("1_iofoj")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jgwnp"]
atlas = ExtResource("1_iofoj")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ove31"]
atlas = ExtResource("1_iofoj")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hessf"]
atlas = ExtResource("1_iofoj")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b335s"]
atlas = ExtResource("1_iofoj")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iyme6"]
atlas = ExtResource("1_iofoj")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2u3c2"]
atlas = ExtResource("1_iofoj")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hc36p"]
atlas = ExtResource("1_iofoj")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eed1w"]
atlas = ExtResource("1_iofoj")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wtx6d"]
atlas = ExtResource("1_iofoj")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sibsj"]
atlas = ExtResource("1_iofoj")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2nerc"]
atlas = ExtResource("1_iofoj")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ablog"]
atlas = ExtResource("1_iofoj")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xdle"]
atlas = ExtResource("1_iofoj")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jtpp6"]
atlas = ExtResource("1_iofoj")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8pjra"]
atlas = ExtResource("1_iofoj")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_07h0d"]
atlas = ExtResource("1_iofoj")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cthxh"]
atlas = ExtResource("1_iofoj")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6webh"]
atlas = ExtResource("1_iofoj")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g65g0"]
atlas = ExtResource("1_iofoj")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5obe6"]
atlas = ExtResource("1_iofoj")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y1i2f"]
atlas = ExtResource("1_iofoj")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3y3m"]
atlas = ExtResource("1_iofoj")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_vn1cl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rttm4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xtxf8")
}],
"loop": true,
"name": &"down_idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jgwnp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ove31")
}],
"loop": false,
"name": &"down_vacuum",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hessf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b335s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iyme6")
}],
"loop": true,
"name": &"down_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2u3c2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hc36p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eed1w")
}],
"loop": true,
"name": &"stunned",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wtx6d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sibsj")
}],
"loop": true,
"name": &"up_idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2nerc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ablog")
}],
"loop": false,
"name": &"up_vacuum",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xdle")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jtpp6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8pjra")
}],
"loop": true,
"name": &"up_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_07h0d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cthxh")
}],
"loop": true,
"name": &"x_idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6webh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g65g0")
}],
"loop": false,
"name": &"x_vacuum",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5obe6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y1i2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3y3m")
}],
"loop": true,
"name": &"x_walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_dkn2o"]
radius = 24.2241

[sub_resource type="AtlasTexture" id="AtlasTexture_y1an0"]
atlas = ExtResource("4_xvanp")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhmqg"]
atlas = ExtResource("4_xvanp")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r28kx"]
atlas = ExtResource("4_xvanp")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6xlj"]
atlas = ExtResource("4_xvanp")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6votb"]
atlas = ExtResource("4_xvanp")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4rpv6"]
atlas = ExtResource("4_xvanp")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5g7cw"]
atlas = ExtResource("4_xvanp")
region = Rect2(384, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7r6v"]
atlas = ExtResource("4_xvanp")
region = Rect2(448, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_of8ca"]
atlas = ExtResource("4_xvanp")
region = Rect2(512, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ct3kc"]
atlas = ExtResource("4_xvanp")
region = Rect2(576, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eutnj"]
atlas = ExtResource("4_xvanp")
region = Rect2(640, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_twlcu"]
atlas = ExtResource("4_xvanp")
region = Rect2(704, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ubx7f"]
atlas = ExtResource("4_xvanp")
region = Rect2(768, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h2iyg"]
atlas = ExtResource("4_xvanp")
region = Rect2(832, 128, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_uma2k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y1an0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhmqg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r28kx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6xlj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6votb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4rpv6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5g7cw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7r6v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_of8ca")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ct3kc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eutnj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_twlcu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ubx7f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h2iyg")
}],
"loop": false,
"name": &"default",
"speed": 25.0
}]

[node name="Slime" type="CharacterBody2D"]
scale = Vector2(1.2, 1.2)
collision_layer = 3
script = ExtResource("1_se23e")

[node name="TransformAnimate" type="AnimatedSprite2D" parent="."]
position = Vector2(-5.83333, 3.33333)
scale = Vector2(2.585, 2.585)
sprite_frames = SubResource("SpriteFrames_lgthj")

[node name="LastEaten" type="Sprite2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_vn1cl")
animation = &"stunned"
autoplay = "down_idle"
frame_progress = 0.228157

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(10.8333, -15, 16.6667, -12.5, 22.5, -7.5, 27.5, 0, 29.1667, 8.33333, 25, 15.8333, 15.8333, 21.6667, 1.66667, 23.3333, -10.8333, 22.5, -20.8333, 17.5, -25.8333, 13.3333, -25.8333, 2.5, -17.5, -9.16667, -10, -14.1667, 0.833333, -16.6667)

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Hover" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hover"]
shape = SubResource("CircleShape2D_dkn2o")

[node name="RayCast2D" type="RayCast2D" parent="."]
collision_mask = 24
collide_with_areas = true

[node name="eat_anim" type="AnimatedSprite2D" parent="."]
position = Vector2(6.14619e-13, 38.3333)
rotation = -1.5708
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_uma2k")
frame = 13
frame_progress = 1.0

[node name="eat_anim1" type="AnimatedSprite2D" parent="."]
position = Vector2(1.66667, -39.1667)
rotation = 1.5708
scale = Vector2(1.345, 1.345)
sprite_frames = SubResource("SpriteFrames_uma2k")
frame = 13
frame_progress = 1.0

[node name="eat_anim2" type="AnimatedSprite2D" parent="."]
position = Vector2(-48.3333, 0.833333)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_uma2k")
frame = 13
frame_progress = 1.0

[node name="eat_anim3" type="AnimatedSprite2D" parent="."]
position = Vector2(48.3333, 3.33333)
rotation = -3.14159
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_uma2k")
frame = 13
frame_progress = 1.0

[node name="eat_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_l35dd")

[node name="transfrom_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_fvjrl")

[connection signal="animation_finished" from="TransformAnimate" to="." method="_on_transform_animate_animation_finished"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="Hover" to="." method="_on_hover_area_entered"]
[connection signal="animation_finished" from="eat_anim" to="." method="_on_eat_anim_animation_finished"]
